--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   background: rgba(255, 12, 12, 0.3) !important;
 }
 
-body{
+body {
   width: 100vw;
   overflow-x: hidden;
 }
@@ -22,17 +22,33 @@ body{
   width: 100%;
   font-size: 20px;
 }
-.rotate-in-2-bl-cw{animation:rotate-in-2-bl-cw .5s cubic-bezier(.25,.46,.45,.94) both}
-@keyframes rotate-in-2-bl-cw{0%{transform:rotate(-45deg);transform-origin:0 100%;opacity:0}100%{transform:rotate(0);transform-origin:0 100%;opacity:1}}
+.rotate-in-2-bl-cw {
+  animation: rotate-in-2-bl-cw 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+@keyframes rotate-in-2-bl-cw {
+  0% {
+    transform: rotate(-45deg);
+    transform-origin: 0 100%;
+    opacity: 0;
+  }
+  100% {
+    transform: rotate(0);
+    transform-origin: 0 100%;
+    opacity: 1;
+  }
+}
 
 .tilt-in-fwd-tr {
-  -webkit-animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-  animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  -webkit-animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    both;
+  animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 @-webkit-keyframes tilt-in-fwd-tr {
   0% {
-    -webkit-transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
-    transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
+    -webkit-transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px)
+      skew(-35deg, 10deg);
+    transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px)
+      skew(-35deg, 10deg);
     opacity: 0;
   }
 
@@ -45,8 +61,10 @@ body{
 
 @keyframes tilt-in-fwd-tr {
   0% {
-    -webkit-transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
-    transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
+    -webkit-transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px)
+      skew(-35deg, 10deg);
+    transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px)
+      skew(-35deg, 10deg);
     opacity: 0;
   }
 
@@ -55,4 +73,33 @@ body{
     transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
     opacity: 1;
   }
+}
+
+.btc-graph {
+  height: 492px;
+  background-color: #ffffff;
+  overflow: hidden;
+  box-sizing: border-box;
+  border: 1px solid #56667f;
+  border-radius: 4px;
+  text-align: right;
+  line-height: 14px;
+  font-size: 12px;
+  font-feature-settings: normal;
+  text-size-adjust: 100%;
+  box-shadow: inset 0 -20px 0 0 #56667f;
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+}
+
+.inner-btc {
+  color: #ffffff;
+  line-height: 14px;
+  font-weight: 400;
+  font-size: 11px;
+  box-sizing: border-box;
+  padding: 2px 6px;
+  width: 100%;
+  font-family: Verdana, Tahoma, Arial, sans-serif;
 }
