--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@ body {
   overflow-x: hidden;
 }
 
+button:disabled{
+  cursor:not-allowed;
+  background: gray;
+}
+
 .no-transaction {
   height: 450px;
 }
